Fixed missing modules issue.